--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,5 +4,5 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">Test</a>.</p>
+    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">Test 22</a>.</p>
 </div>
