This project is linked to GitHub repo, (Both use GIT)

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,5 +4,5 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">Azure test 33 666</a>.</p>
+    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">This project is linked to GitHub repo, (Both use GIT)</a>.</p>
 </div>
